--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,7 +2,7 @@
 <head th:replace="fragments/header :: head"></head>
 <body>
 
-<h1>To Be Implemented Next Spring</h1>
+<h1>To Be Implemented Next Sprint</h1>
 <!--<div th:replace="fragments/header :: header"></div>-->
 
 <!--<h1 th:text="#{label.form.title}">form</h1>-->
