--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -21,7 +21,7 @@
     <div class="navbar navbar-expand-lg bg-light">
         <a class="navbar-brand custom-txt" href="/">
             <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="68"/>
-            TSP Portal
+            Timesheet Portal
         </a>
     </div>
 </header>
