--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,24 +5,42 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
     <title>Admiral Time Sheet Portal</title>
-
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           crossorigin="anonymous"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB">
     <link href="css/starter-template.css" rel="stylesheet"/>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 </head>
 <!--Fragment End-->
 
 
 <body>
 <!--Fragment Start-->
-<header th:fragment="header" class="masthead mb-auto">
-    <div class="navbar navbar-expand-lg bg-light">
-        <a class="navbar-brand custom-txt" href="/">
-            <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="68"/>
-            Timesheet Portal
-        </a>
+<header th:fragment="header" class="pos-f-t">
+
+    <div class="pos-f-t">
+
+
+
+        <nav class="navbar bg-light navbar-fixed-top">
+            <a class="navbar-brand custom-txt" href="/">
+                <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="65"/>
+                Timesheet Portal
+            </a>
+            <button class="navbar-toggler-icon custom-label"  type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+        </nav>
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+                <h5 class="text-white h4">Dashboard</h5>
+                <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+        </div>
     </div>
 </header>
 <!--Fragment End-->
