--- a/src/main/resources/static/css/starter-template.css
+++ b/src/main/resources/static/css/starter-template.css
@@ -8,6 +8,11 @@ body {
     text-align: left;
 }
 
+.custom-focus, button:focus {
+    outline: 0;
+}
+
+
 .custom-txt {
     font-family: sans-serif;
     font-weight: 800;
@@ -46,4 +51,15 @@ body {
     background-color: #0D3759;
     border-radius: 20px;
 }
-
+@media (min-width: 768px) {
+    .container-fluid>.navbar-header,
+    .container>.navbar-header {
+        width: 31%; /*31% as you mentioned in comments*/
+    }
+    img.navbar-brand {
+        width: auto;
+        height: auto;
+        max-height: 500px;
+        max-width: 100%;
+    }
+}
