--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <!--Fragment Start-->
 <head th:fragment="head">
@@ -10,8 +11,12 @@
           crossorigin="anonymous"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB">
     <link href="css/starter-template.css" rel="stylesheet"/>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 
 </head>
 <!--Fragment End-->
@@ -19,32 +24,79 @@
 
 <body>
 <!--Fragment Start-->
-<header th:fragment="header" class="pos-f-t">
-
-    <div class="pos-f-t">
+<header th:fragment="header">
 
 
+    <nav class="navbar navbar-expand-lg bg-light navbar-fixed-top">
+        <a class="navbar-brand custom-txt" href="/">
+            <img th:src="@{/images/banner_admiral_logo.png}"
+                 th:width="235" th:height="65" class="img-responsive"/>
+            Timesheet Portal
+        </a>
 
-        <nav class="navbar bg-light navbar-fixed-top">
-            <a class="navbar-brand custom-txt" href="/">
-                <img th:src="@{/images/banner_admiral_logo.png}" th:width="235" th:height="65"/>
-                Timesheet Portal
-            </a>
-            <button class="navbar-toggler-icon custom-label"  type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+        <div class="container-fluid" id="navbarSupportedContent">
+            <div class="navbar-nav mr-auto"></div>
+            <div sec:authorize="isAnonymous()" class="nav-item">
+                <a class="btn btn-outline-dark custom-bg" th:href="@{/login}">Login</a>
+            </div>
+
+            <div sec:authorize="isAuthenticated()" class="nav-item">
+                <form method="post" th:action="@{/logout}">
+                    <input class="btn btn-outline-dark custom-bg" type="submit" value="Logout"/>
+                </form>
+            </div>
+
+            <!--Collapse Button-->
+            <button class="custom-focus custom-label" type="button" data-toggle="collapse"
+                    data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                Menu
             </button>
 
-        </nav>
-        <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-                <h5 class="text-white h4">Dashboard</h5>
-                <span class="text-muted">Toggleable via the navbar brand.</span>
+        </div>
+    </nav>
+
+    <!--Collapse Menu-->
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+            <!--Not Logged In-->
+            <div sec:authorize="isAnonymous()">
+                <h5 class="text-white h4">You are not logged in and cannot view any Channels</h5>
             </div>
+
+            <!--Is Logged In-->
+            <div sec:authorize="isAuthenticated()">
+
+                <h5 class="text-white h4">Channels</h5>
+
+                <!--Do Login Based Buttons Here-->
+                <div sec:authorize="hasAuthority('ROLE_ADMIN')">
+                    <a class="btn btn-light" href="/">Home</a>
+                    <a class="btn btn-light">View Timesheets WIP</a>
+                    <a class="btn btn-light">Create Users WIP</a>
+                    <a class="btn btn-light">Manage Users WIP</a>
+                </div>
+
+                <div sec:authorize="hasAuthority('ROLE_MANAGER')">
+                    <a class="btn btn-light" href="/">Home</a>
+
+                    <a class="btn btn-light" th:href="@{/Approvals}">View Timesheets</a>
+
+                </div>
+
+                <!--            sec:authentication="principal.authorities"-->
+                <div sec:authorize="hasAuthority('ROLE_CONTRACTOR')">
+                    <a class="btn btn-light" href="/">Home</a>
+                    <a class="btn btn-light" th:href="@{/contractorView}">New Timesheet</a>
+                    <a class="btn btn-light">Old Timesheets WIP</a>
+                </div>
+
+            </div>
+
         </div>
     </div>
+
 </header>
 <!--Fragment End-->
 </body>
-
-
 </html>
