--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/header :: head"></head>
@@ -30,21 +31,73 @@
                                  th:if="${#fields.hasErrors(username)}">
                                 Username Error: Please enter a valid username.
                             </div>
+                        </div>
 
-                            <div class="form-group custom-label">
-                                <label th:for="firstname">firstName</label>
-                                <input aria-describedby="Enter First Name."
-                                       class="form-control"
-                                       placeholder="First Name"
-                                       th:field="*{firstname}"
-                                       type="text">
+                        <div class="form-group custom-label">
+                            <label th:for="firstName">First Name</label>
+                            <input aria-describedby="Enter First Name."
+                                   class="form-control"
+                                   placeholder="First Name"
+                                   th:field="*{firstName}"
+                                   type="text">
 
-                                <div class="alert alert-danger"
-                                     th:errors="*{firstname}"
-                                     th:if="${#fields.hasErrors(firstname)}">
-                                    First Name Error: Please enter a valid First Name.
-                                </div>
+                            <div class="alert alert-danger"
+                                 th:errors="*{firstName}"
+                                 th:if="${#fields.hasErrors(firstName)}">
+                                First Name Error: Please enter a valid First Name.
+                            </div>
+                        </div>
 
+                        <div class="form-group custom-label">
+                            <label th:for="surname">Surname</label>
+                            <input aria-describedby="Enter a Surname."
+                                   class="form-control"
+                                   placeholder="Surname"
+                                   th:field="*{surname}"
+                                   type="text">
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{surname}"
+                                 th:if="${#fields.hasErrors(surname)}">
+                                Surname Error: Please enter a valid surname.
+                            </div>
+                        </div>
+
+                        <div class="form-group custom-label">
+                            <label th:for="email">Email</label>
+                            <input aria-describedby="Enter an Email"
+                                   class="form-control"
+                                   placeholder="Email"
+                                   th:field="*{email}"
+                                   type="text">
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{email}"
+                                 th:if="${#fields.hasErrors(email)}">
+                                Email Error: Please enter a valid email.
+                            </div>
+                        </div>
+
+                        <div class="form-group custom-label">
+                            <label th:for="password">Password</label>
+                            <input aria-describedby="Enter Password."
+                                   class="form-control"
+                                   placeholder="Password"
+                                   th:field="*{password}"
+                                   type="text">
+
+                            <div class="alert alert-danger"
+                                 th:errors="*{password}"
+                                 th:if="${#fields.hasErrors(password)}">
+                                Password Error: Please enter a valid password.
+                            </div>
+                        </div>
+
+                        <div class="row mt-4">
+                            <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
+
+                            <input class="btn btn-lg btn-primary btn-block custom-btn" id="submit" type="submit"
+                                   value="Submit Registration Form"/>
                         </div>
 
                     </form>
